[CSS Regions] Region overset property is not properly computed when there is a region break https://bugs.webkit.org/show_bug.cgi?id=92497

Patch by Mihai Maerean <mmaerean@adobe.com> on 2013-02-27
Reviewed by David Hyatt.

Source/WebCore:

For "paginated" content in regions that has -webkit-region-break-after:always, the bottom margin was being passed
along for the next region in the chain, which shouldn't happen.

The fix is, at layout, to clear the bottom margin for the nodes (inside paginated contexts) that have
-webkit-region-break-after:always.

Tests: fast/multicol/break-after-always-bottom-margin.html
       fast/regions/overset-break-nested.html
       fast/regions/overset-break-with-sibling.html
       fast/regions/overset-break.html

* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::applyAfterBreak):

LayoutTests:

* fast/multicol/break-after-always-bottom-margin-expected.txt: Added.
* fast/multicol/break-after-always-bottom-margin.html: Added.
* fast/regions/overset-break-expected.txt: Added.
* fast/regions/overset-break-nested-expected.txt: Added.
* fast/regions/overset-break-nested.html: Added.
* fast/regions/overset-break-with-sibling-expected.txt: Added.
* fast/regions/overset-break-with-sibling.html: Added.
* fast/regions/overset-break.html: Added.

Canonical link: https://commits.webkit.org/129266@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@144178 268f45cc-cd09-0410-ab3c-d52691b4dbfc